[package]
name = "bevy_bug_example_pkg"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.0", default-features = false, features = [
  "bevy_asset",
  "bevy_scene",
  "bevy_render",
  "bevy_core_pipeline",
  "bevy_sprite",
  "bevy_text",
  "default_font",
  # "multi-threaded",
  "bevy_winit",
  "x11"
] }

bevy_egui = { version = "0.25.0" }
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap", branch = "main", features = [
    "atlas",
] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3